--- a/.gitignore
+++ b/.gitignore
@@ -129,5 +129,26 @@ dist
 .yarn/install-state.gz
 .pnp.*
 
-# Other
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
 login.txt
